--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
         <lombok.version>1.18.34</lombok.version>
         <jakarta.persistence-api.version>3.2.0</jakarta.persistence-api.version>
+        <jackson-databind.version>2.17.2</jackson-databind.version>
 
         <junit-jupiter.version>5.10.3</junit-jupiter.version>
         <junit-platform-launcher.version>1.10.3</junit-platform-launcher.version>
@@ -40,7 +41,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.17.2</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
         <dependency>
